<resources>
    <string name="app_name">Test App</string>
    <string name="action_settings">Settings</string>
    <string name="btnUploadToServer">Upload to Server</string>
    <string name="btnTakePicture">Upload  Image</string>
    <string name="memberLogin"> Already a member? Login</string>
    <string name="creatAccount"> Crate Account</string>
    <string name="chooseFile"> Choose File</string>
    <string name="subscribe"> Subscribe</string>
    <string name="Password"> Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email"> Email</string>
    <string name="name"> Name</string>
    <string name="pick_date"> Birthday</string>
    <string name="location"> Send Location</string>
    <string name="google_maps_key">AIzaSyAovx66ibWrLbPYxUCPjJrqNNxqz4KXgYI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="buttonName">Saved Location</string>
    <string name="title_activity_show_users">ShowUsers</string>
    <string name="title_activity_show_user_details">ShowUserDetails</string>

</resources>
