 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/name" />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/Password"/>
        </android.support.design.widget.TextInputLayout>

        <!-- subscribe button  -->

        <android.support.v7.widget.SwitchCompat
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:checked="true"
            android:hint="@string/subscribe"
            android:textColorHint="#000"
            android:gravity="start"
            android:textSize="16sp"
            android:theme="@style/MySwitch">

        </android.support.v7.widget.SwitchCompat>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/android_dropdown_arrays"
                />

            <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/linearLayout1"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chooseFile"
                android:textSize="16sp">
                </TextView>
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnCapturePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/btn_bg"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/btnTakePicture"
                android:textColor="@color/white" />
            </LinearLayout>


            <!--<android.support.v7.widget.AppCompatButton-->
                <!--android:id="@+id/date_button"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/pick_date"-->
                <!--android:paddingLeft="20dp"-->
                <!--android:paddingRight="20dp" />-->

            <!--<Spinner-->
                <!--android:id="@+id/spinnerDate"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp"-->
                <!--/>-->

            <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/creatAccount"/>

        <TextView android:id="@+id/link_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/memberLogin"
            android:gravity="center"
            android:textSize="16sp"
            />
</LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    </RelativeLayout>
